@@ -1,3 +1,8 @@
+2004-03-10  Kentaro Sato <kentaro@ranvis.com>
+
+	* timidity/timidity.c:
+	  Fixed an old bug preventing from specifying "pan=left" in config.
+
 2004-03-10  Saito <saito@intaa.net>
 
 	* timidity/readmidi.c, timidity/reverb.[ch], timidity/tables.[ch]:
